--- a/PalermoTiGuida/PalermoTiGuida-Info.plist
+++ b/PalermoTiGuida/PalermoTiGuida-Info.plist
@@ -57,8 +57,23 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.palermo.${PRODUCT_NAME:rfc1034identifier}</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1420114154884876</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>1.3</string>
+	<string>1.6</string>
+	<key>FacebookAppID</key>
+	<string>1420114154884876</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
